<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColorMyViews">

    <TextView
        android:id="@+id/tv_clr_box1"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Box_One"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_clr_box2"
        style="@style/WhiteBox"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/box_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_clr_box1" />

    <TextView
        android:id="@+id/tv_clr_box3"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Box_Three"
        app:layout_constraintBottom_toTopOf="@+id/tv_clr_box4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_clr_box2"
        app:layout_constraintTop_toTopOf="@+id/tv_clr_box2" />

    <TextView
        android:id="@+id/tv_clr_box4"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Box_Four"
        app:layout_constraintBottom_toTopOf="@+id/tv_clr_box3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_clr_box2"
        app:layout_constraintTop_toBottomOf="@+id/tv_clr_box5" />

    <TextView
        android:id="@+id/tv_clr_box5"
        style="@style/WhiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Box_Five"
        app:layout_constraintBottom_toBottomOf="@+id/tv_clr_box2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_clr_box2"
        app:layout_constraintTop_toBottomOf="@+id/tv_clr_box4" />

    <TextView
        android:id="@+id/tv_clr_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/How_to_play"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_clr_input"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_clr_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/Tap_the_screen_and_boxes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_clr_label"
        app:layout_constraintTop_toBottomOf="@+id/tv_clr_box2" />

    <Button
        android:id="@+id/btn_clr_Red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/box_red"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_clr_Blue"
        app:layout_constraintEnd_toStartOf="@+id/btn_clr_Blue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_clr_Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Box_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_clr_Green"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_clr_Red"
        app:layout_constraintTop_toBottomOf="@+id/tv_clr_input"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/btn_clr_Green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/box_green"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_clr_Blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_clr_Blue" />
</androidx.constraintlayout.widget.ConstraintLayout>